examples/test/testpolicy10553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10553
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key34: value22
      key13: value32
      key3: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value40
      podSelector:
        matchLabels:
          key17: value38
          key47: value37
          key45: value26
